module/src/components/dropdown/dropdown.basic.scss
$arm-dropdown-top: var(--arm-dropdown-top) !default;
$arm-dropdown-left: var(--arm-dropdown-left) !default;
$arm-dropdown-width: var(--arm-dropdown-width) !default;
$arm-dropdown-min-width: 50px !default;

$arm-dropdown-height: 240px;

.arm-dropdown {
  width: max-content;
  user-select: none;
}

.arm-dropdown-content {
  position: fixed;
  top: $arm-dropdown-top;
  left: $arm-dropdown-left;
  width: $arm-dropdown-width;
  min-width: $arm-dropdown-min-width;
  overflow: auto;
  max-height: $arm-dropdown-height;
  user-select: none;
  z-index: 2;
}

@include screen-phone {
  .arm-dropdown-content {
    left: $spacing-xsmall;
    width: calc(100vw - #{$spacing-xsmall * 2});
  }
}

